test files and working version of prior-making scripts

--- a/inferelator_ng/prior-making-notes/prior-tests.ipynb
+++ b/inferelator_ng/prior-making-notes/prior-tests.ipynb
@@ -12,12 +12,12 @@
     "import pybedtools\n",
     "import pandas\n",
     "import statistics as stat\n",
-    "from sklearn.cluster import KMeans\n"
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -26,13 +26,6 @@
     "class Motifs:\n",
     "\n",
     "    \"\"\"\n",
-    "    \n",
-    "    \n",
-    "    input here should be motifs in peaks already\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
     "    -----------------\n",
     "    Attributes\n",
     "    -----------------\n",
@@ -57,18 +50,23 @@
     "                      ---\n",
     "                      Keys: motif holders -- will be used later to build the prior \n",
     "                      Values: pandas DataFrame with insertion counts around each motif for the motif(s) associated with identifier,\n",
-    "                              rownames are motif holders -- chrom,start,end,tf.\n",
+    "                              rownames are motif holders -- chrom,start,end,tf,score,strand\n",
     "\n",
     "    tn5_9mer_counts: holds a dictionary with matrices of 9mer counts around motifs for a particular transcription factor\n",
     "                     ---\n",
     "                     Keys: motif holders -- will be used later to build the prior\n",
     "                     Values: pandas DataFrame with 9mer counts around each motif for the motif(s) associated with identifier,\n",
-    "                             rownames are motif holders -- chrom,start,end,tf.\n",
+    "                             rownames are motif holders as above\n",
     "\n",
-    "    motif_clusters_insertion_counts:\n",
+    "    motif_clusters_insertion_counts: hold a dictionary with clusters of motifs to 'keep' or 'not_keep' -- generated using insertion counts\n",
+    "                                     Keys: motif IDs (as above)\n",
+    "                                     Values: pandas DataFrame with clusters of motifs associated with identifier.\n",
+    "                                     rownames are motif holders as above\n",
     "\n",
-    "    motif_clusters_9mer_counts:\n",
-    "\n",
+    "    motif_clusters_9mer_counts: hold a dictionary with clusters of motifs to 'keep' or 'not_keep' -- generated using 9mer counts\n",
+    "                                     Keys: motif IDs (as above)\n",
+    "                                     Values: pandas DataFrame with clusters of motifs associated with identifier.\n",
+    "                                     rownames are motif holders as above\n",
     "    \n",
     "    \"\"\"\n",
     "\n",
@@ -276,11 +274,30 @@
     "            \n",
     "            self.motif_clusters_9mer_counts[motif_id] = results\n",
     "\n",
-    "            \n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "class Edge:\n",
     "    \n",
     "    \"\"\"\n",
-    "    \n",
+    "    Container for edges in the prior\n",
+    "    ----------\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    regulator: transcription factor name\n",
+    "    target: target gene name\n",
+    "    weight: weight to be put in the prior matrix\n",
+    "    motif: motif coordinates\n",
+    "    gene: gene coordinates -- obs. NOW I HAVE THE TSS HERE, SHOULD BE CHANGED\n",
+    "    distance: peak distance to gene \n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self, regulator, target, weight, motif, gene, distance):\n",
@@ -292,13 +309,22 @@
     "        self.gene = gene\n",
     "        self.distance = distance\n",
     "        \n",
-    "        \n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "        \n",
     "class Prior:\n",
     "    \n",
     "    \"\"\"\n",
-    "    \n",
-    "    -----------------\n",
+    "    ----------------\n",
     "    Attributes\n",
     "    -----------------\n",
     "    \n",
@@ -351,9 +377,6 @@
     "        \n",
     "    def __str__(self):\n",
     "        \n",
-    "        \"\"\"\n",
-    "        \n",
-    "        \"\"\"\n",
     "        \n",
     "        print \"Prior generated from: \"\n",
     "        print \"Alignment file: \" + self.bam_file\n",
@@ -368,9 +391,8 @@
     "        \n",
     "        \n",
     "        \"\"\"\n",
-    "        returns BedTool with good motifs (?)\n",
+    "        returns a BedTool with good motifs: all if no clustering, else motifs in cluster 'keep'.\n",
     "        \"\"\"\n",
-    "        \n",
     "        \n",
     "        if self.cluster == True:\n",
     "            \n",
@@ -419,7 +441,7 @@
     "    def get_peaks(self):\n",
     "        \n",
     "        \"\"\"\n",
-    "        \n",
+    "        returns a BedTool with peaks in peaks_file\n",
     "        \"\"\"\n",
     "        \n",
     "        peaks = pybedtools.BedTool(self.peaks_file)\n",
@@ -431,7 +453,7 @@
     "    def get_tss(self):\n",
     "        \n",
     "        \"\"\"\n",
-    "        \n",
+    "        returns a BedTool with TSS coordinates in tss_file\n",
     "        \"\"\"\n",
     "        \n",
     "        tss_genes = pybedtools.BedTool(self.tss_file)\n",
@@ -443,7 +465,8 @@
     "    def assign_motifs_to_genes(self):\n",
     "        \n",
     "        \"\"\"\n",
-    "        \n",
+    "        assign motifs to genes -- first assign peaks to genes and then all motifs in that peak to that gene.\n",
+    "        returns a BedTool with motif - peak - gene coordinates\n",
     "        \"\"\"\n",
     "        \n",
     "        motifs = self.motifs        \n",
@@ -497,7 +520,7 @@
     "    def make_prior(self):\n",
     "            \n",
     "        \"\"\"\n",
-    "        NOT READY\n",
+    "        call all functions to generate the prior and fill in edges attribute\n",
     "        \"\"\"\n",
     "            \n",
     "        self.get_motifs()\n",
@@ -506,25 +529,27 @@
     "        self.get_edges()    \n",
     "            \n",
     "            \n",
-    "    def write_prior_matrix(self):\n",
+    "    def make_prior_matrix(self):\n",
     "            \n",
     "        \"\"\"\n",
-    "        NOT READY\n",
+    "        returns a pandas DataFrame with the prior matrix using all edges in self.edges\n",
+    "        rows are genes in self.target_genes, columns are the TFs in self.transcription_factors\n",
     "        \"\"\"\n",
     "            \n",
     "        prior = pandas.DataFrame(0, index = self.target_genes, \n",
-    "                                        columns = self.transcription_factors)\n",
+    "                                    columns = self.transcription_factors)\n",
     "            \n",
     "        for edge in self.edges:\n",
     "\n",
     "            prior.ix[edge.target, edge.regulator] = edge.weight\n",
-    "            \n",
-    "                \n"
+    "        \n",
+    "        return(prior)\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -548,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -559,7 +584,7 @@
        "2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -587,6 +612,80 @@
    "source": [
     "for x in prior.edges:\n",
     "    print x.regulator + ' regulates ' + x.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Egr1</th>\n",
+       "      <th>Mafb</th>\n",
+       "      <th>Rorc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gene1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gene2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Egr1  Mafb  Rorc\n",
+       "gene1     0     0     0\n",
+       "gene2     0     1     1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior.make_prior_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('chr1', '20725699', '20725699', 'gene2')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior.edges[0].gene"
    ]
   },
   {
