--- a/inferelator_ng/prior-making-notes/prior-tests.ipynb
+++ b/inferelator_ng/prior-making-notes/prior-tests.ipynb
@@ -8,11 +8,12 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "import pysam\n",
     "import pybedtools\n",
     "import pandas\n",
     "import statistics as stat\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n"
    ]
   },
   {
@@ -23,6 +24,7 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "class Motifs:\n",
     "\n",
     "    \"\"\"\n",
@@ -285,6 +287,7 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "class Edge:\n",
     "    \n",
     "    \"\"\"\n",
@@ -308,8 +311,7 @@
     "        self.motif = motif\n",
     "        self.gene = gene\n",
     "        self.distance = distance\n",
-    "        \n",
-    "        \n"
+    "        "
    ]
   },
   {
@@ -556,7 +558,6 @@
    "outputs": [],
    "source": [
     "# inputs\n",
-    "\n",
     "motifs_file = './input-tests/motifs_test_file.bed'\n",
     "bam_file = './input-tests/bam_test_file.bam'\n",
     "peaks_file = './input-tests/peaks_test_file.bed'\n",
@@ -690,12 +691,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('chr1', '20725817', '20725829', 'Rorc')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior.edges[0].motif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obs.\n",
+    "should I add the insertion/9mer counts at motif to the Edge attribute?\n",
+    "how to do with the genes? HTSeq count?\n",
+    "cache options here might be important...\n",
+    "suggestions? :)"
+   ]
   }
  ],
  "metadata": {
