Fix test files and small fix in ipynb
Test files now contain generic names for features, changed TF locations
to have different insertion counts, fix small indentation problem in
the ipynb.

--- a/inferelator_ng/prior-making-notes/prior-tests.ipynb
+++ b/inferelator_ng/prior-making-notes/prior-tests.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -316,13 +316,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "        \n",
     "class Prior:\n",
     "    \n",
     "    \"\"\"\n",
@@ -348,6 +347,8 @@
     "    \n",
     "    cluster: whether to cluster motifs or not \n",
     "    \n",
+    "    #,max_upstream_distance = float(\"Inf\"), max_downstream_distance = float(\"Inf\")):\n",
+    "    \n",
     "    max_upstream_distance: bp upstream allowed for assignment peak to gene\n",
     "    \n",
     "    max_downstream_distance: bp downstream allowed for assignment peak to gene\n",
@@ -356,10 +357,9 @@
     "    \n",
     "    def __init__(self, bam_file, motifs_file,  peaks_file, tss_file,\n",
     "                 transcription_factors, target_genes, cluster = True,\n",
-    "                 upstream_in_matrix = 50, downstream_in_matrix = 50, \n",
-    "                 max_upstream_distance = float(\"Inf\"), max_downstream_distance = float(\"Inf\")):\n",
-    "\n",
-    "        self.bam_file = bam_file     \n",
+    "                 upstream_in_matrix = 50, downstream_in_matrix = 50):\n",
+    "        \n",
+    "        self.bam_file = bam_file\n",
     "        self.motifs_file = motifs_file \n",
     "        self.peaks_file = peaks_file   \n",
     "        self.tss_file = tss_file\n",
@@ -368,8 +368,8 @@
     "        self.upstream_in_matrix = upstream_in_matrix\n",
     "        self.downstream_in_matrix = downstream_in_matrix\n",
     "        self.cluster = cluster \n",
-    "        self.max_upstream_distance = max_upstream_distance     \n",
-    "        self.max_downstream_distance = max_downstream_distance \n",
+    "        #self.max_upstream_distance = max_upstream_distance     \n",
+    "        #self.max_downstream_distance = max_downstream_distance \n",
     "        \n",
     "        self.motifs = []\n",
     "        self.peaks = []\n",
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -562,19 +562,18 @@
     "bam_file = './input-tests/bam_test_file.bam'\n",
     "peaks_file = './input-tests/peaks_test_file.bed'\n",
     "tss_file = './input-tests/tsses_test_file.bed'\n",
-    "transcription_factors = ['Egr1', 'Mafb', 'Rorc']\n",
+    "transcription_factors = ['TF1', 'TF2', 'TF3']\n",
     "target_genes = ['gene1', 'gene2']\n",
     "\n",
     "prior = Prior(bam_file, motifs_file,  peaks_file, tss_file,\n",
     "              transcription_factors, target_genes, cluster = True,\n",
-    "              upstream_in_matrix = 50, downstream_in_matrix = 50, \n",
-    "              max_upstream_distance = float(\"Inf\"), max_downstream_distance = float(\"Inf\"))\n",
+    "              upstream_in_matrix = 50, downstream_in_matrix = 50)\n",
     "prior.make_prior()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -582,10 +581,10 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -605,8 +604,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rorc regulates gene2\n",
-      "Mafb regulates gene2\n"
+      "TF2 regulates gene2\n",
+      "TF1 regulates gene2\n",
+      "TF3 regulates gene1\n"
      ]
     }
    ],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -630,9 +630,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Egr1</th>\n",
-       "      <th>Mafb</th>\n",
-       "      <th>Rorc</th>\n",
+       "      <th>TF1</th>\n",
+       "      <th>TF2</th>\n",
+       "      <th>TF3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -640,25 +640,25 @@
        "      <th>gene1</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gene2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Egr1  Mafb  Rorc\n",
-       "gene1     0     0     0\n",
-       "gene2     0     1     1"
+       "       TF1  TF2  TF3\n",
+       "gene1    0    0    1\n",
+       "gene2    1    1    0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -680,7 +680,7 @@
        "('chr1', '20725699', '20725699', 'gene2')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -699,16 +699,72 @@
     {
      "data": {
       "text/plain": [
-       "('chr1', '20725817', '20725829', 'Rorc')"
+       "('chr1', '20725795', '20725810', 'TF2')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "prior.edges[0].motif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TF1</th>\n",
+       "      <th>TF2</th>\n",
+       "      <th>TF3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gene1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gene2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       TF1  TF2  TF3\n",
+       "gene1    1    0    1\n",
+       "gene2    1    1    0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior = Prior(bam_file, motifs_file,  peaks_file, tss_file,\n",
+    "              transcription_factors, target_genes, cluster = False,\n",
+    "              upstream_in_matrix = 50, downstream_in_matrix = 50)\n",
+    "prior.make_prior()\n",
+    "prior.make_prior_matrix()"
    ]
   },
   {
