make sure that tf and gene are in matrix

--- a/inferelator_ng/prior-making-notes/prior-tests.ipynb
+++ b/inferelator_ng/prior-making-notes/prior-tests.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -542,16 +542,18 @@
     "                                    columns = self.transcription_factors)\n",
     "            \n",
     "        for edge in self.edges:\n",
+    "            \n",
+    "            if edge.target in self.target_genes and edge.regulator in self.transcription_factors:\n",
     "\n",
-    "            prior.ix[edge.target, edge.regulator] = edge.weight\n",
+    "                prior.ix[edge.target, edge.regulator] = edge.weight\n",
     "        \n",
-    "        return(prior)\n",
+    "        return prior\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -573,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -584,7 +586,7 @@
        "3"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -617,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -658,7 +660,7 @@
        "gene2    1    1    0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -680,18 +682,18 @@
        "('chr1', '20725699', '20725699', 'gene2')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prior.edges[0].gene"
+    "prior.edges[0].gene # FIX?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -702,7 +704,7 @@
        "('chr1', '20725795', '20725810', 'TF2')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -754,7 +756,7 @@
        "gene2    1    1    0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
