additional input files and a python script version of the ipynb

--- a/inferelator_ng/prior-making-notes/prior-making-tests-with-parallelization.ipynb
+++ b/inferelator_ng/prior-making-notes/prior-making-tests-with-parallelization.ipynb
@@ -730,9 +730,7 @@
     }
    ],
    "source": [
-    "prior.make_prior_matrix()\n",
-    "\n",
-    "\n"
+    "prior.make_prior_matrix()"
    ]
   },
   {
@@ -770,24 +768,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "mat = prior.make_prior_matrix()\n"
+    "mat = prior.make_prior_matrix()\n",
+    "mat.to_csv('./output_prior_mat.tsv', sep = '\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "mat.to_csv('./output_prior_mat.tsv', sep = '\\t')"
+    "import pickle\n",
+    "pickle.dump(prior, open(\"output_prior.p\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "prior2 = pickle.load(open(\"output_prior.p\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TF1</th>\n",
+       "      <th>TF2</th>\n",
+       "      <th>TF3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gene1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gene2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       TF1  TF2  TF3\n",
+       "gene1    0    0    1\n",
+       "gene2    1    1    0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior2.make_prior_matrix()"
    ]
   },
   {
